# didacus-site

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  db.sqlite3  pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/core/: admin.py  models.py
backend/core/migrations/: 0001_initial.py
backend/tests/: test_models.py  test_serializers.py  test_views.py
frontend/: Dockerfile  package-lock.json  package.json  postcss.config.cjs  vite.config.js
frontend/src/: App.jsx
